@@ -31,5 +31,5 @@ using System.Runtime.InteropServices;
 //
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
-[assembly: AssemblyVersion("0.3.11.4")]
-[assembly: AssemblyFileVersion("0.3.11.4")]
+[assembly: AssemblyVersion("0.3.11.6")]
+[assembly: AssemblyFileVersion("0.3.11.6")]
